# ditty

./: .clang-format  .gitattributes  .gitignore  AUTHORS  BUILTIN_REFERENCE.md  CONTRIBUTING.md  EMBEDDING.md  LANGUAGE_GUIDE.md  LANGUAGE_REFERENCE.md  Makefile.am  NEWS  README.md  configure.ac  ditty.desktop.in
.crush/skills/commit/: SKILL.md
.crush/skills/install/: SKILL.md
.github/workflows/: ci.yml  windows.yml
build-aux/: git-version.sh
cli/: Makefile.am  colors.h  ditty.rc  flare_style_charmtones.c  main.c  repl_app.c  repl_app.h
doc/: arithmetic.md  comparison.md  errors.md  file-io.md  filesystem.md  functions.md  packages.md  special-forms.md  string-ports.md  strings.md  symbols.md
docstrings/: filesystem.md  functions.md  hash-tables.md  packages.md  special-forms.md  tui.md  type-predicates.md
emacs/: Makefile.am  README.md  bloom-lisp-mode.el  ditty-mode-tests.el  ditty-mode.el
flare/: flare.c
include/: file_utils.h  lisp.h  lisp_value.h  utf8.h
include/bloom-lisp/: highlight.h
include/ditty/: flare_iterator.h  flare_layout.h  flare_lexer.h  flare_lexer_ditty_classifier.h  flare_source.h  flare_token_source.h  flare_writer.h  highlight.h
lat/: lat.c
lisp/: lisp-fmt.lisp  tui-events.lisp
repl/: Makefile.am  main.c
scripts/: build-mingw64.sh  build-ucrt64.sh  gen-builtin-ref.sh  gen-docstrings.sh  make-dist-app.sh  make-dist-zip.sh
src/: Makefile.am  builtins.c  builtins_arithmetic.c  builtins_file_io.c  builtins_filesystem.c  builtins_internal.h  builtins_packages.c  builtins_strings.c  builtins_symbols.c  builtins_tui.c  env.c  eval.c  file_utils.c  flare_color.c  flare_formatter.c  flare_formatter_terminal.c  flare_highlight.c  flare_iterator_reflow.c  flare_lexer.c  flare_lexer_bloom_lisp.c  flare_lexer_commonmark.c  flare_lexer_ditty.c  flare_lexer_ditty_classifier.c  flare_source.c  flare_style.c  flare_style_dracula.c  flare_style_github_dark.c  flare_style_github_light.c  flare_style_monokai.c  flare_terminal.c  flare_token_source.c  flare_token_type.c  flare_writer.c  lisp.c  print.c  reader.c  utf8.c
tests/: Makefile.am  flare_testkit.h  run-test.sh  test-helpers.lisp  test_api.c  test_auto_indent.c  test_color.c  test_file_utils.c  test_flare.c  test_flare_lexer_commonmark.c  test_flare_lexer_ditty.c  test_flare_lexer_ditty_classifier.c  test_formatter.c  test_hyperlink.c  test_lexer.c  test_lexer_commonmark.c  test_repl_app.c  test_repl_completeness.c  test_roundtrip.c  test_sf_kind.c  test_style.c  test_token_type.c
tests/advanced/: collection_iteration.lisp  cond_case.lisp  condition-system.lisp  do_loop.lisp  file_io.lisp  introspection.lisp  let_star.lisp  lisp-fmt.lisp  load.lisp  load_path.lisp  macros.lisp  named_functions.lisp  optional-parameters.lisp  progn.lisp  quasiquote.lisp  regex.lisp  require_provide.lisp  tail_recursion.lisp  utf8.lisp
tests/basic/: alists.lisp  and_or_list.lisp  apply.lisp  characters.lisp  define_shorthand.lisp  filesystem.lisp  floor_modulo.lisp  format.lisp  hash_tables.lisp  integer_ops.lisp  integers.lisp  keywords.lisp  length.lisp  list_reverse.lisp  make_string.lisp  named_let.lisp  number_literals.lisp  optional_defaults.lisp  packages.lisp  path_expansion.lisp  path_functions.lisp  printing.lisp  recursion.lisp  string-index.lisp  string_number_conversion.lisp  string_ports.lisp  strings.lisp  symbols.lisp  tui_events.lisp  tui_read_byte.lisp  tui_sleep.lisp  tui_terminal.lisp  utf8_display_width.lisp  vectors.lisp
tests/fixtures/app_lib/: app-helper.lisp
tests/fixtures/extra_lib/: extra-lib.lisp
tests/regression/: colon_symbol.lisp  multiline_parsing.lisp  nested-unknown-hash-syntax.lisp  tail_call_unwrap.lisp
